# vrising-arm64

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.minimal  Dockerfile.native  Dockerfile.vrising-fex-mvp  GUIA_MODS_ARM.md  LICENSE  README-NATIVE.md  README.md  SERVER_SETTINGS.md  ServerGameSettings.json  ServerHostSettings.json  backup.sh  blueprint-mvp.md  deep_research_solution.md  docker-compose.debug.yml  docker-compose.minimal.yml  docker-compose.native.yml  docker-compose.yml  entrypoint.debug.sh  entrypoint.fulldebug.sh  entrypoint.minimal.sh  entrypoint.native.sh  entrypoint.sh  healthcheck.sh  init.sh  setup-mvp.sh  start.sh  wine-preloader-wrapper  wine-wrapper.sh
.github/workflows/: generate-interop.yml  test-arm64.yml
bepinex/: README.md  doorstop_config.ini
bepinex/prebuilt/: README.md
bepinex/prebuilt/interop/: .gitkeep
bepinex/server/: README.md
bepinex/server/BepInEx/config/: BepInEx.cfg
bepinex/server/BepInEx/interop/: assembly-hash.txt  (+1 more)
config/: README.md  ServerGameSettings.json  ServerHostSettings.json  emulators.rc
docs/: BEPINEX-ARM64-TROUBLESHOOTING.md  BEPINEX-INTEROP-PREGENERATION.md  GUIDE-KindredLogistics.md  NTSYNC_RESEARCH.md  OPTIMIZATION.md  SPECS-001-foundation.md  SPECS-002-bepinex-mods.md  STRUCTURE.md  TROUBLESHOOTING.md
mods/: .gitkeep  doorstop_config.ini
mods/BepInEx/config/: BepInEx.cfg
mods/BepInEx/interop/: MethodAddressToToken.db  assembly-hash.txt
scripts/: download-mod.sh  download_bepinex.sh  entrypoint.sh  load_emulators_env.sh  setup_bepinex.sh
src/: config.rs  main.rs
