[package]
name = "vrising-launcher"
version = "1.0.0"
edition = "2021"
description = "V Rising Dedicated Server Launcher for ARM64 - Rust Edition"
authors = ["Based on luansilvadb/vrising-arm64"]

[dependencies]
# Error handling
anyhow = "1.0"

# CLI argument parsing with env var support
clap = { version = "4.4", features = ["derive", "env"] }

# JSON serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
log = "0.4"
env_logger = "0.10"

# Time/date for logging timestamps
chrono = "0.4"

# Signal handling
ctrlc = "3.4"

# Process timeout handling
wait-timeout = "0.2"

[profile.release]
opt-level = 3        # Optimize for speed (was size)
lto = "fat"          # Full Link-time optimization
codegen-units = 1    # Single codegen unit for better optimization
panic = "abort"      # Abort on panic (smaller binary)
strip = true         # Strip symbols
